-The widget that displays the cards is now a full webbrowser, with e.g. 
 support for Javascript, animated gifs, ...	
-Move to SQL as the storage backend, resulting in improved speed and memory
 usage, as well as better scalability for large decks. Majority of work done
 by Ed Bartosh.
-Mnemosyne now saves after each reviewed card.
-Avoid showing the same card twice in a row.
-Cards which are failed during learning ahead are now periodically brought
 back in the learning process.
-When leaving the program open overnight, the display will update at the
 roll over point.
-Intelligent sorting of categories containing numbers, so that you no longer
 have to call a category 'Lesson 01' instead of 'Lesson '1 to get the correct
 ordering (Mike Appleby).
-Uses Phonon as sound backend instead of PyGame (Louis Cyphre).

-Updated French translation by Christophe Méalarès and Yannick Voglaire.


MNEMOSYNE 1.2.1 : 2009-04-11

-Fix bug so that vice versa cards now always start with grade 0.
-Fix problems with missing locale under some unix systems.
-Fix hang under Spanish translation.
-Danish translation by Randi H.
-Esperanto translation by jchthys.
-Updated Japanese translation by Patrick Kenny.

	
MNEMOSYNE 1.2 : 2008-11-25

-Improved support for unicode in filenames and directories.
-Reverted compression of backups from gz to bz2 again, to circumvent a   
 bug under Windows with unicode directory names.
-Wrote a plugin to always shuffle the revision queue, for users who want
 to override the prioritised scheduling introduced in Mnemosyne 1.1.
 This plugin can also be downloaded from 
 http://www.mnemosyne-proj.org/node/142
-Only open the sound system when needed in order to save CPU time 
 (patch by marmuta).
-More robust upgrading from old Mnemosyne versions.
-Fix bug where default export location was incorrectly specified.
-Reword statistics dialog to make clear that we only show data for 
 the next week.
-Norwegian translation by Petter Goksoyr Asen. 
	
