@@ -33,8 +33,17 @@ easily, which allows plugin writers maximum flexibility.
  by Ed Bartosh.
 -Mnemosyne now saves after each reviewed card.
 -Avoid showing the same card twice in a row.
+-The learing history is now stored in an SQL database, allowing to calculate
+ more statistics
+-Graphical statistics (Mike Appleby)
 -Cards which are failed during learning ahead are now periodically brought
  back in the learning process.
+-Added cramming scheduler plugin, which goes through your cards in random
+ order and does not affect the normal scheduler data. It is visually
+ distinguished from the regular scheduler by having only two grade buttons
+ (Right and Wrong)
+-Windows Mobile client
+-Maemo client
 -When leaving the program open overnight, the display will update at the
  roll over point.
 -Intelligent sorting of categories containing numbers, so that you no longer
@@ -43,7 +52,7 @@ easily, which allows plugin writers maximum flexibility.
 -Uses Phonon as sound backend instead of PyGame (Louis Cyphre).
 
 -Updated French translation by Christophe Méalarès and Yannick Voglaire.
-
+-Hungarian translation by bkil
 
 MNEMOSYNE 1.2.1 : 2009-04-11
 
